fixed bug with text color not showing properly on articles

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -27,7 +27,7 @@ html {
 
 html,
 body {
-  color: var(--text-color);
+  color: var(--text-color-p);
   background: linear-gradient(
     90deg,
     var(--background-color-1),
